--- a/src/styles.css
+++ b/src/styles.css
@@ -447,9 +447,19 @@ body {
     color: var(--muted);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
     .top-nav a {
-        font-size: 0.95rem; /* mobile size */
+        font-size: 0.93rem; /* mobile size */
+    }
+
+    .top-nav {
+        gap: 0.5rem;
+    }
+}
+
+@media (max-width: 501px) and (max-width: 600px) {
+    .top-nav a {
+        font-size: 0.98rem; /* mobile size */
     }
 
     .top-nav {
